--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
 		<div id="inicio" class="page active">
 			<div class="container">
 				<h2 class="section-title">Filmes em Destaque</h2>
-				<div class="filmes-grid" id="filmesGrid"></div>
+				<div class="filmes-grid" id="filmesGrid">
+				</div>
 			</div>
 		</div>
 
@@ -104,6 +105,7 @@
 			</div>
 		</div>
 
+		<!-- MODAL - AVALIAR FILME -->
 		<div id="modalAvaliacao" class="modal">
 			<div class="modal-content">
 				<span class="close">&times;</span>
@@ -156,6 +158,7 @@
 					</button>
 				</form>
 
+				<!-- LISTA DE AVALIAÇÕES DO FILME -->
 				<div class="avaliacoes-list">
 					<h4><i class="fas fa-comments"></i> Avaliações</h4>
 					<div id="avaliacoesList"></div>
@@ -163,6 +166,7 @@
 			</div>
 		</div>
 
+		<!-- MODAL - EDITAR FILME -->
 		<div id="modalEdicao" class="modal">
 			<div class="modal-content modal-edicao">
 				<span class="close">&times;</span>
@@ -209,6 +213,7 @@
 			</div>
 		</div>
 
+		<!-- TOAST DE NOTIFICAÇÕES -->
 		<div id="toast" class="toast"></div>
 
 		<script src="index.js"></script>
